--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-Tac-Toe</title>
+    <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
     <section class="tic">
         <h1>Tic-Tac-Toe</h1>
-        <h2></h2>
+        <h2 class="information"></h2>
         <div class="squares">
             <div class="firstRow">
                 <button class="1"></button>
@@ -30,8 +31,7 @@
     </section>
     <footer>
         <div class="footer">
-          <p class="made-by">Made By</p>
-          <p class="author">Barbara Gabała</p>
+          <p class="made-by">Made By Barbara Gabała</p>
         </div>
       </footer>
 </body>
