--- a/index.html
+++ b/index.html
@@ -8,24 +8,17 @@
 </head>
 <body>
     <section class="tic">
-        <h1>Tic-Tac-Toe</h1>
-        <h2 class="information"></h2>
+            <h1 class="title">Tic-Tac-Toe</h1>
         <div class="squares">
-            <div class="firstRow">
-                <button class="1"></button>
-                <button class="2"></button>
-                <button class="3"></button>
-            </div>
-            <div class="secondRow">
-                <button class="4"></button>
-                <button class="5"></button>
-                <button class="6"></button>
-            </div>
-            <div class="thirdRow">
-                <button class="7"></button>
-                <button class="8"></button>
-                <button class="9"></button>
-            </div>
+                <button class="square" id="1"></button>
+                <button class="square" id="2"></button>
+                <button class="square" id="3"></button>
+                <button class="square" id="4"></button>
+                <button class="square" id="5"></button>
+                <button class="square" id="6"></button>
+                <button class="square" id="7"></button>
+                <button class="square" id="8"></button>
+                <button class="square" id="9"></button>
         </div>
         <button class="restart">Restart</button>
     </section>
